# Numerical-Algorithms-Applied-to-Computational-Quantum-Chemistry

./: CMakeLists.txt  README.md  Suv_RA.txt  build.sh  notes.txt  test.sh
atoms/: H2.xyz  H2O.xyz  HF.xyz  HO.xyz
sample_input/hw5_2/: H2.json  H2O.json  HF.json  HO.json
sample_output/hw5_2/: H2.hdf5  H2.stdout  H2O.hdf5  H2O.stdout  HF.hdf5  HF.stdout  HO.hdf5  HO.stdout
src/: CMakeLists.txt  H3.cpp  SAB.cpp  header_file.hpp  hw4_1.cpp  hw5_2.cpp  hw5_2_eigen.cpp
tests/: conftest.py  test_hdf5.py
